overflow on mobile fix

--- a/src/components/reactComponents/styles/_project.scss
+++ b/src/components/reactComponents/styles/_project.scss
@@ -3,6 +3,7 @@
 
 swiper-container {
   height: 100%;
+  max-width: -webkit-fill-available;
 }
 
 .project-container {
