--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -53,6 +53,7 @@ body {
 .App {
   scroll-snap-type: y mandatory;
   overflow: clip auto;
+  margin: auto;
 
   height: 100vh;
   > :not(nav, .Chapter) {
